gungraun/tests/ui/test_library_benchmark_invalid_bench_arguments.stderr
error: Expected 0 arguments but found 1

         = help: This argument is expected to have the same amount of parameters as the benchmark function

 --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:5:13
  |
5 | #[bench::id(42)]
  |             ^^

error: Expected 0 arguments but found 1

         = help: This argument is expected to have the same amount of parameters as the benchmark function

 --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:6:18
  |
6 | #[benches::multi(42)]
  |                  ^^

error: Expected 1 arguments but found 0

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:10:1
   |
10 | #[library_benchmark]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `library_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Expected 1 arguments but found 0

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:14:1
   |
14 | #[library_benchmark]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `library_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Expected 1 arguments but found 2

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:20:13
   |
20 | #[bench::id(42, 8)]
   |             ^^

error: Expected 1 arguments but found 2

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:24:18
   |
24 | #[benches::multi((42, 8))]
   |                  ^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:29:13
   |
29 | #[bench::id("hello")]
   |             ^^^^^^^
   |             |
   |             expected `u8`, found `&str`
   |             arguments to this function are incorrect
   |
help: the return type of this call is `&'static str` due to the type of the argument passed
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:29:13
   |
29 | #[bench::id("hello")]
   |             ^^^^^^^ this argument influences the return type of `std`
note: function defined here
  --> $RUST/core/src/hint.rs
   |
   | pub const fn black_box<T>(dummy: T) -> T {
   |              ^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:33:18
   |
33 | #[benches::multi("hello")]
   |                  ^^^^^^^
   |                  |
   |                  expected `u8`, found `&str`
   |                  arguments to this function are incorrect
   |
help: the return type of this call is `&'static str` due to the type of the argument passed
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:33:18
   |
33 | #[benches::multi("hello")]
   |                  ^^^^^^^ this argument influences the return type of `std`
note: function defined here
  --> $RUST/core/src/hint.rs
   |
   | pub const fn black_box<T>(dummy: T) -> T {
   |              ^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:40:5
   |
39 | fn bench5(my: u8) -> String {
   |                      ------ expected `String` because of return type
40 |     my
   |     ^^- help: try using a conversion method: `.to_string()`
   |     |
   |     expected `String`, found `u8`
